# DiscordAlaKorwinVoiceBot

./: .gitignore  Dockerfile  README.md  bot.py  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: 1-feature.yml  2-bug.yml  3-enhancement.yml  4-refactor.yml
bot/: __init__.py  client.py  commands.py
entities/: Cache.py  Category.py  KorwinCatalogue.py  __init__.py
entities/cache/: __init__.py  local_cache.py
entities/catalogue/: __init__.py  cache.py  category.py  korwin_catalogue.py
utils/: __init__.py  generate_voice_on_go.py  setup_logging.py
utils/audio/: __init__.py  generate_voice.py
utils/logging/: __init__.py  setup.py
