[project]
name = "korwinaidiscordbot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.1",
    "discord-py>=2.5.2",
    "elevenlabs>=1.56.1",
    "pandas>=2.2.3",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "pynacl>=1.5.0",
    "python-dotenv>=1.1.0",
    "simpleaudio>=1.0.4",
]
